--- a/src/app/grafico/grafico.component.html
+++ b/src/app/grafico/grafico.component.html
@@ -1,5 +1,4 @@
-<h3>Gráfico de aparelhos</h3>
-<h3>Digite seu aparelho</h3>
+
 
 <div class="container">
     <nav class="navbar">
@@ -8,6 +7,8 @@
         </li>
     </nav>
 </div>
+<h3>Gráfico de aparelhos</h3>
+<h3>Digite seu aparelho</h3>
 
 <div class="container mb-3">
     <div class="row">
@@ -26,10 +27,32 @@
             <label for="energy" class="form-label">Quantidade de energia que o aparelho consome</label>
             <input class="form-control" type="number" id="energy" [(ngModel)]="model.energy" required>
         </div>
+
+        <div class="col form-group">
+            <label for="voltage" class="form-label">Voltagem do aparelho</label>
+            <input class="form-control" type="number" id="voltage" [(ngModel)]="model.voltage" required>
+        </div>
+    </div>
+        <div class="row">
+            <div class="col form-group">
+                <label for="average" class="form-label">Média de consumo</label>
+                <input class="form-control" type="number" id="average" [(ngModel)]="model.average" required>
+            </div>
+        <div class="col form-group">
+            <label for="energy-saving" class="form-label">Economia de Energia</label>
+            <input class="form-control" type="number" id="energy-saving" [(ngModel)]="model.energySaving" required>
+        </div>
     </div>
 </div>
 
 <button class="btn btn-primary me-3" (click)="addAparelho()">Cadastrar</button>
+
+<div *ngIf="aparelho.length > 0" class="mt-3">
+    <h3>Informações de Consumo</h3>
+    <p>O aparelho <strong>{{ model.name }}</strong> gasta aproximadamente <strong>{{ calculateEnergyConsumption() }}</strong> de energia por hora.</p>
+</div>
+
+<canvas #chartCanvas></canvas>
 
 <table *ngIf="aparelho.length > 0" class="table">
     <thead>
@@ -37,6 +60,9 @@
             <th scope="col">Nome</th>
             <th scope="col">Tempo</th>
             <th scope="col">Energia</th>
+            <th scope="col">Voltagem</th>
+            <th scope="col">Média de Consumo</th>
+            <th scope="col">Economia de energia</th>
         </tr>
     </thead>
     <tbody>
@@ -44,6 +70,8 @@
             <th scope="row">{{aparelho.name}}</th>
             <td>{{aparelho.time}}</td>
             <td>{{aparelho.energy}}</td>
+            <td>{{aparelho.voltage}}</td>
+            <td>{{aparelho.average}}</td>
         </tr>
     </tbody>
 </table>
