--- a/src/app/grafico/grafico.component.html
+++ b/src/app/grafico/grafico.component.html
@@ -1,5 +1,4 @@
 
-
 <div class="container">
     <nav class="navbar">
         <li class="nav-link">
@@ -18,13 +17,13 @@
         </div>
 
         <div class="col form-group">
-            <label for="time" class="form-label">Tempo de consumo</label>
+            <label for="time" class="form-label">Tempo de consumo (Em minutos)</label>
             <input class="form-control" type="number" id="time" [(ngModel)]="model.time" required>
         </div>
     </div>
     <div class="row">
         <div class="col form-group">
-            <label for="energy" class="form-label">Quantidade de energia que o aparelho consome</label>
+            <label for="energy" class="form-label">Quantidade de energia consumida (Em KwH)</label>
             <input class="form-control" type="number" id="energy" [(ngModel)]="model.energy" required>
         </div>
 
@@ -33,15 +32,15 @@
             <input class="form-control" type="number" id="voltage" [(ngModel)]="model.voltage" required>
         </div>
     </div>
-        <div class="row">
-            <div class="col form-group">
+       <div class="row">
+             <!--<div class="col form-group">
                 <label for="average" class="form-label">Média de consumo</label>
                 <input class="form-control" type="number" id="average" [(ngModel)]="model.average" required>
             </div>
         <div class="col form-group">
             <label for="energy-saving" class="form-label">Economia de Energia</label>
             <input class="form-control" type="number" id="energy-saving" [(ngModel)]="model.energySaving" required>
-        </div>
+        </div>-->
     </div>
 </div>
 
@@ -49,7 +48,8 @@
 
 <div *ngIf="aparelho.length > 0" class="mt-3">
     <h3>Informações de Consumo</h3>
-    <p>O aparelho <strong>{{ model.name }}</strong> gasta aproximadamente <strong>{{ calculateEnergyConsumption() }}</strong> de energia por hora.</p>
+    <p>O aparelho <strong>{{ model.name }}</strong> gasta aproximadamente <strong>{{ calculateEnergyConsumption() }}</strong> KwH por hora.</p>
+    <p>Você pagará <strong>R$ {{ calculatePrice() }}</strong></p>
 </div>
 
 <canvas #chartCanvas></canvas>
