--- a/src/app/grafico/grafico.component.html
+++ b/src/app/grafico/grafico.component.html
@@ -48,7 +48,7 @@
 
 <div *ngIf="aparelho.length > 0" class="mt-3">
     <h3>Informações de Consumo</h3>
-    <p>O aparelho <strong>{{ model.name }}</strong> gasta aproximadamente <strong>{{ calculateEnergyConsumption() }}</strong> KwH por hora.</p>
+    <p>O aparelho <strong>{{ aparelho[aparelho.length - 1].name }}</strong> gasta aproximadamente <strong>{{ calculateEnergyConsumption() }}</strong> KwH por hora.</p>
     <p>Você pagará <strong>R$ {{ calculatePrice() }}</strong></p>
 </div>
 
