--- a/src/app/tela-inicio/tela-inicio.component.html
+++ b/src/app/tela-inicio/tela-inicio.component.html
@@ -4,13 +4,13 @@
 <div class="container">
     <nav class="navbar">
         <li class="nav-link">
-            <a class="nav-link" routerLink="/grafico" routerLinkActive="active">Gráfico</a>
+            <a class="nav-link" routerLink="/grafico" routerLinkActive="active">Cadastrar Aparelho</a>
         </li>
     </nav>
 
         <nav class="navbar">
             <li class="nav-link">
-                <a class="nav-link" routerLink="/aparelhos" routerLinkActive="active">Aparelhos Cadastrados</a>
+                <a class="nav-link" routerLink="/aparelhos" routerLinkActive="active">Consumo dos Aparelhos</a>
             </li>
         </nav>
 </div>
